tweaking style and image

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<title>OAF Game</title>
+		<link rel="stylesheet" href="css/style.css" type="text/css" />
+		<title>OAF Game Shop</title>
 	</head>
 	<body id="body">
-		<div id="myShop"><a href="//shop.spreadshirt.com/oafgame">oafgame</a></div>
-
+		<div class="w50c">
+			<img class="w100" src="image/OAF.png" alt="OAF"/>
+		</div>
+		<div id="myShop" style="text-align:center"><a href="//shop.spreadshirt.com/oafgame">SHOP</a></div>
 		<script>
 			var spread_shop_config = {
 				shopName: 'oafgame',
@@ -13,7 +16,6 @@
 				baseId: 'myShop'
 			};
 		</script>
-
 		<script type="text/javascript" src="//shop.spreadshirt.com/shopfiles/shopclient/shopclient.nocache.js"></script>
 	</body>
 </html>
