making full width

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>OAF Game Shop</title>
 	</head>
 	<body id="body">
-		<div class="w50c">
+		<div class="w100">
 			<img class="w100" src="image/OAF.png" alt="OAF"/>
 		</div>
 		<div id="myShop" style="text-align:center"><a href="//shop.spreadshirt.com/oafgame">SHOP</a></div>
